# WorkScript

./: .gitignore  .main.ws.swp  .project  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  README.md  TODOList.txt  WorkScript.sln  WorkScript一入门就精通.docx  a.ll  demo  demo.ll  demo.s  demo.ws  main.ws  令牌引用机制.docx
ANTLR/: CMakeLists.txt
Runtime/: antlr4cpp-vs2015.vcxproj
WorkScript/: AbstractContext.cpp  AbstractContext.h  AccessDeniedException.cpp  AccessDeniedException.h  ArrayType.cpp  ArrayType.h  AssignmentExpression.cpp  AssignmentExpression.h  AutoMakeNumberExpression.hpp  BinaryCalculateExpression.cpp  BinaryCalculateExpression.h  BinaryCompareExpression.cpp  BinaryCompareExpression.h  BinaryExpression.cpp  BinaryExpression.h  BinaryOperatorExpression.cpp  BinaryOperatorExpression.h  BinaryTermExpression.cpp  BinaryTermExpression.h  BooleanExpression.cpp  BooleanExpression.h  BooleanType.cpp  BranchFunction.cpp  BranchFunction.h  BranchOverload.cpp  BranchOverload.h  BranchOverloadTemplate.cpp  BranchOverloadTemplate.h  ByteExpression.cpp  ByteExpression.h  BytePointerExpression.cpp  BytePointerExpression.h  ByteType.cpp  CMakeLists.txt  CallExpression.cpp  CallExpression.h  CallStack.h  ClassDiagram.cd  CompareExpression.cpp  CompareExpression.h  (+234 more)
WorkScript/ANTLR/: ExternalAntlr4Cpp.cmake  FindANTLR.cmake
WorkScript/Context/: AbstractContext.cpp  AbstractContext.h  DeducedInfo.cpp  DeducedInfo.h  GenerateContext.h  GenerateResult.h  InstantialContext.cpp  InstantialContext.h  InstantializeContext.cpp  InstantializeContext.h  ValueDescriptor.cpp  ValueDescriptor.h
WorkScript/ErrorManager/: ErrorManager.cpp  ErrorManager.h  WorkScriptError.h  WorkScriptException.cpp  WorkScriptException.h  WorkScriptWarning.h
WorkScript/Exception/: Exception.cpp  Exception.h  SyntaxErrorException.h  WorkScriptException.cpp  WorkScriptException.h
WorkScript/Function/: BranchFunction.cpp  BranchFunction.h  Function.cpp  Function.h  FunctionBranch.cpp  FunctionBranch.h  FunctionCache.cpp  FunctionCache.h  FunctionFragment.cpp  FunctionFragment.h  FunctionQuery.cpp  FunctionQuery.h  Parameter.cpp  Parameter.h  ParameterDecl.cpp  ParameterDecl.h
WorkScript/Generator/: LLVMGenerateResult.h  LLVMGenerator.cpp  LLVMGenerator.h
WorkScript/Module/: Module.cpp  Module.h
WorkScript/Parser/: ExpressionWrapper.h  FormalParametersResolver.cpp  FormalParametersResolver.h  SymbolCollectVisitor.h  SyntaxErrorListener.cpp  SyntaxErrorListener.h  SyntaxErrorStrategy.cpp  SyntaxErrorStrategy.h  TreeCreateVisitor.cpp  TreeCreateVisitor.h  TypeWrapper.h  WorkScript.g4
WorkScript/Program/: Program.cpp  Program.h
WorkScript/Report/: Error.h  Report.cpp  Report.h  ReportItem.cpp  ReportItem.h  Warning.h  report.cpp
WorkScript/SymbolTable/: GeneralSymbolInfo.cpp  GeneralSymbolInfo.h  ReferenceSymbolInfo.h  SymbolInfo.cpp  SymbolInfo.h  SymbolTable.cpp  SymbolTable.h
WorkScript/Tree/: Assignment.cpp  Assignment.h  AssignmentExpression.cpp  BinaryCalculate.cpp  BinaryCalculate.h  BinaryCalculateExpression.cpp  BinaryCompare.cpp  BinaryCompare.h  BinaryCompareExpression.cpp  BinaryOperator.cpp  BinaryOperator.h  BinaryOperatorExpression.cpp  BinaryOperatorExpression.h  Call.cpp  Call.h  CallExpression.cpp  CallExpression.h  Constant.cpp  Constant.h  ConstantExpression.cpp  Expression.h  ExpressionInfo.h  ExpressionType.h  FloatConstant.cpp  FloatConstant.h  IntegerConstant.cpp  IntegerConstant.h  MultiValue.cpp  MultiValue.h  MultiValueExpression.cpp  StringConstant.cpp  StringConstant.h  UnaryOperator.cpp  UnaryOperator.h  UnaryOperatorExpression.cpp  Value.h  Variable.cpp  Variable.h
WorkScript/Type/: ArrayType.cpp  ArrayType.h  FloatType.cpp  FloatType.h  FunctionType.cpp  FunctionType.h  IntegerType.cpp  IntegerType.h  MultiValueType.cpp  MultiValueType.h  PointerType.cpp  PointerType.h  ReferenceType.cpp  ReferenceType.h  Type.cpp  Type.h  TypeClassification.h  VoidType.cpp  VoidType.h  type.cpp
WorkScript/Util/: DebugInfo.h  Locale-Linux.cpp  Locale-Win32.cpp  Locales-Linux.cpp  Locales-Windows.cpp  Locales.h  NonCopyable.h  StringCache.cpp  StringCache.h  Utils.h
WorkScript/Visitor/: VisitResult.h  Visitor.h
docs/: .~rkScript一入门就精通.docx  WorkScript一入门就精通.docx
src/: AbstractContext.cpp  ArrayType.h  BranchOverloadTemplate.h  CMakeLists.txt  Expression.cpp  ExpressionInfo.h  FloatConstant.h  FormalParametersResolver.cpp  Function.cpp  FunctionBranch.cpp  FunctionCache.h  FunctionType.h  GenerateContext.h  GenerateResult.h  InstantializeContext.cpp  IntegerConstant.cpp  IntegerType.cpp  Locale-Linux.cpp  Locale-Win32.cpp  Locale.h  Location.h  MultiValueExpression.h  NativeFunction.cpp  OverloadTemplate.h  PointerType.cpp  PointerType.h  Program.h  StringConstant.cpp  SymbolInfo.cpp  SymbolInfo.h  SymbolTable.cpp  SyntaxErrorException.h  SyntaxErrorStrategy.cpp  TreeCreateVisitor.cpp  Type.cpp  Type.h  UnaryOperatorExpression.h  VariableExpression.cpp  VariableExpression.h  VoidType.cpp  (+5 more)
utils/: CMakeLists.txt  CmdArg.cpp  CmdArg.h  CmdArgs.cpp  CmdArgs.def  CmdArgs.h  Locales-Linux.cpp  Locales-Windows.cpp  Locales.h  Utils.cpp  Utils.h
ws/: CMakeLists.txt  Cleaner.cpp  Cleaner.h  ExternalCaller.cpp  ExternalCaller.h  LinkInfo.cpp  LinkInfo.h  ws.cpp
wsc/: CMakeLists.txt  CmdArg.cpp  CmdArg.h  Options.cpp  Options.h  WorkScriptCompiler-Linux.cpp  WorkScriptCompiler.cpp  WorkScriptCompiler.h  wsc.cpp
wsi/: CMakeLists.txt  WorkScriptEngine.cpp  WorkScriptEngine.h  wsi.cpp
wsi/Parser/: TreeCreateVisitor.cpp  TreeCreateVisitor.h  WorkScript.g4  generate.sh
